--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <ul class="inline-pluse mb-0">
         <li class="logo">
           <a href="http://services.scoreme.in">
-            <img src="http://services.scoreme.in/images/logo2.png" alt="Resurgent India" title="Resurgent India" class="img-fluid">
+            <img src="https://www.scoreme.in/images/logo.png" alt="Resurgent India" title="Resurgent India" class="img-fluid">
           </a>
         </li>
         <li>
