--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <ul class="inline-pluse mb-0">
         <li class="logo">
           <a href="http://services.scoreme.in">
-            <img src="images/logo.png" alt="Resurgent India" title="Resurgent India" class="img-fluid">
+            <img src="http://services.scoreme.in/images/logo2.png" alt="Resurgent India" title="Resurgent India" class="img-fluid">
           </a>
         </li>
         <li>
@@ -100,8 +100,8 @@
                   </div>
                   <div class="col-md-4">
                     <div class="counter1 p-1">
-                      <ul class="text-center p-3 mb-0 m-counter">
-                        <li id="value-1">1</li>
+                      <ul class="text-center p-3 mb-0">
+                        <li>1M</li>
                         <li>API Transactions</li>
                       </ul>
                     </div>
@@ -462,7 +462,7 @@
               </div>
             </div>
             <div class="col-xl-3 col-md-6 col-12">
-              <div class="card offer-wrap">
+              <div class="card offer-wrap gstr-tab">
                 <div class="img d-flex justify-content-center">
                   <img class="card-img-top mt-3 rounded-circle w-24" src="images/service/services3.jpg" alt="Card image cap">
                 </div>
@@ -475,8 +475,8 @@
                 </div>
               </div>
             </div>
-            <div class="col-xl-3 col-md-6 col-12" >
-              <div class="card offer-wrap">
+            <div class="col-xl-3 col-md-6 col-12">
+              <div class="card offer-wrap financial-tab">
                 <div class="img d-flex justify-content-center">
                   <img class="card-img-top mt-3 rounded-circle w-24" src="images/service/financial.jpg" alt="Card image cap">
                 </div>
@@ -544,7 +544,7 @@
           </div>
           <div class="row">
             <div class="col-xs-6 col-md-12 col-md-6 col-lg-6 svg-img">
-<svg width="500" height="300" viewBox="0 0 500 300" fill="none" xmlns="http://www.w3.org/2000/svg">
+<svg viewBox="0 0 500 300" fill="none" xmlns="http://www.w3.org/2000/svg">
 <g id="Frame 1">
 <g id="vector">
 <path id="Vector 2" d="M275.07 295C274.648 295 274.225 294.891 273.903 294.674L208.118 250.162L210.22 243.704C212.632 246.052 215.158 248.233 217.792 250.232L224.577 255.384L273.903 288.752L273.929 288.766L276.096 290.235C276.418 290.452 276.84 290.56 277.263 290.56C277.685 290.56 278.108 290.452 278.432 290.235L349.321 242.276C349.398 242.223 349.468 242.165 349.527 242.104C349.603 242.027 349.661 241.949 349.706 241.862C349.769 241.741 349.801 241.615 349.801 241.486C349.801 241.304 349.801 240.125 349.801 239.306L352.769 241.314C353.413 241.75 353.413 242.46 352.769 242.895L276.239 294.674C275.917 294.891 275.494 295 275.07 295ZM191.405 238.858L189.975 237.891C190.274 234.821 190.582 231.538 190.582 231.538C190.582 231.538 191.012 235.135 191.405 238.858ZM199.598 233.253C199.609 232.581 199.615 231.907 199.623 231.235C199.79 231.471 199.958 231.705 200.129 231.938L199.598 233.253ZM182.418 232.778L144.797 207.321C144.15 206.885 144.15 206.179 144.797 205.742L148.545 203.206C148.969 203.341 149.402 203.448 149.829 203.549C150.974 203.824 152.118 204.097 153.262 204.368C154.262 204.608 155.491 205.141 155.539 206.335C155.541 206.358 155.541 206.381 155.541 206.403C155.541 207.112 155.092 207.716 154.857 208.377C154.722 208.752 154.661 209.147 154.661 209.546C154.661 210.606 155.095 211.683 155.76 212.428C156.676 213.453 157.945 213.939 159.198 214.152C160.452 214.366 161.727 214.34 162.984 214.506C164.927 214.765 166.824 215.489 168.522 216.625C168.781 216.797 169.041 216.982 169.311 217.127V219.624C169.311 220.389 169.77 221.317 170.334 221.706L172.137 222.924C172.157 222.936 172.175 222.945 172.194 222.958C172.47 223.126 172.818 223.21 173.165 223.21C173.315 223.21 173.467 223.193 173.612 223.164C173.614 223.161 173.618 223.161 173.621 223.161C173.829 223.113 174.025 223.034 174.192 222.922L182.346 217.404C182.324 217.954 182.308 218.276 182.308 218.276C182.308 218.276 182.349 218.437 182.492 218.699C182.328 222.516 182.248 227.262 182.372 231.362C182.385 231.834 182.402 232.306 182.418 232.778Z" fill="#D7D9D8"/>
